--- a/Prueba.Application/Prueba.Application.csproj
+++ b/Prueba.Application/Prueba.Application.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Prueba.Domain\Prueba.Domain.csproj" />
+    <ProjectReference Include="..\Prueba.Repository\Prueba.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
