--- a/Prueba.WebApi/Prueba.WebApi.csproj
+++ b/Prueba.WebApi/Prueba.WebApi.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0" />
@@ -18,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Prueba.Application\Prueba.Application.csproj" />
     <ProjectReference Include="..\Prueba.Repository\Prueba.Repository.csproj" />
   </ItemGroup>
 
