--- a/Prueba.WebApi/appsettings.json
+++ b/Prueba.WebApi/appsettings.json
@@ -7,6 +7,7 @@
       "Default": "Warning"
     }
   },
+  "SSO_URL_AUTHORITY": "",
   "AllowedHosts": "*",
   "FileProcesor": {
     "InitVector": "bd2TuzT7SekeFjgk",
