--- a/ClientWebAPI/ClientWebAPI.Web/appsettings.json
+++ b/ClientWebAPI/ClientWebAPI.Web/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ClientWebAPI": {
-    "ClientId": "0oajn6009jYs8TVJu0h7",
-    "ClientSecret": "w7EAmidONtGYbc2pNBBoraNsOc32G7C_15hzR2X8",
-    "TokenUrl": "https://dev-867692.oktapreview.com/oauth2/default/v1/token"
+    "Name": "User Juan Pablo Neira",
+    "Password": "LocalTest1",
+    "TokenUrl": "https://localhost:44344/action"
   },
   "Logging": {
     "LogLevel": {
