Implemented Unit Test. But sadly it doesn't work from Rest API, so it must be moved onto ClientWebAPI instead.

--- a/RestAPISwagger/Prueba.WebApi/Prueba.WebApi.csproj
+++ b/RestAPISwagger/Prueba.WebApi/Prueba.WebApi.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\Prueba.Repository\Prueba.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
