--- a/RestAPISwagger/Prueba.UnitTests/Prueba.UnitTests.csproj
+++ b/RestAPISwagger/Prueba.UnitTests/Prueba.UnitTests.csproj
@@ -17,6 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
@@ -28,6 +30,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Prueba.Domain\Prueba.Domain.csproj" />
     <ProjectReference Include="..\Prueba.Repository\Prueba.Repository.csproj" />
+    <ProjectReference Include="..\Prueba.WebApi\Prueba.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
