--- a/RestAPISwagger/Prueba.WebApi/appsettings.json
+++ b/RestAPISwagger/Prueba.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "database": "Server=.;Database=Prueba;Trusted_Connection=True;"
+    "database": "Server=LAPTOP-ARCQ1V30\\SQLEXPRESS;Database=Prueba;Trusted_Connection=True;"
   },
   "RestAPIServer": {
     "Name": "User Juan Pablo Neira",
