-Se finaliza modelo draw.io UML de Proyecto Prueba -Se integran modelos anteriores:  User  Pais  Region  Comuna  ServicioSocial  RolUser
-Se remueven servicios no utilizados

-Se implementan servicios para

Entity [User]:
- CrearUser.

Parcialmente (Todo 1):
- EliminarUser (Modelo OK, pero falta testear implementación)
- CrearLoginUsuario (Modelo OK, pero falta testear implementación)
- ObtenerUsers (Modelo OK, pero falta testear implementación)
- ObtenerUser (Modelo OK, pero falta testear implementación)
- ActualizarUser (Modelo OK, pero falta testear implementación).

Todo2 CRUD:
-Pais
-Region
-Comuna
-ServicioSocial
-RolUser

Todo3 Avanzar con lógica de requerimientos en PDF

-

Nota: Una vez finalizado Todo 1, se utiliza como base para implementar Todo 2

--- a/RestAPISwagger/Prueba.WebApi/appsettings.Development.json
+++ b/RestAPISwagger/Prueba.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "database": "Server=.;Database=Prueba;Trusted_Connection=True;"
+    "database": "Server=localhost\\SQLEXPRESS;Database=Prueba;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
