--- a/RestAPISwagger/Prueba.WebApi/appsettings.json
+++ b/RestAPISwagger/Prueba.WebApi/appsettings.json
@@ -3,9 +3,7 @@
     "database": "Server=localhost\\SQLEXPRESS;Database=Prueba;Trusted_Connection=True;"
   },
   "RestAPIServer": {
-    "Name": "User Juan Pablo Neira",
-    "Password": "LocalTest1",
-    "TokenUrl": "https://localhost:44344/action"
+    "TokenUrl": "https://localhost:44344/action/"
   },
   "Logging": {
     "LogLevel": {
